--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,6 @@ board = nodemcuv2
 framework = arduino
 lib_deps = 
 	greiman/SSD1306Ascii@^1.3.1
-	enjoyneering/RotaryEncoder@^1.4.2
+    soligen2010/ClickEncoder@0.0.0-alpha+sha.9337a0c46c
 monitor_speed = 115200
-upload_port = COM[3]
+upload_port = /dev/ttyUSB0
